# Driver

./: .gitignore  CMakeLists.txt  CMakePresets.json  GSTREAMER_SETUP_COMPLETE.md  Main.qml  README.md  SWITCHING_VIDEO_IMPLEMENTATIONS.md  VIDEO_IMPLEMENTATION.md
apps/: CMakeLists.txt
apps/video/: CMakeLists.txt  VideoScreen.qml  qmldir
apps/wheelInput/: CMakeLists.txt  WheelInput.qml  qmldir
net/: CMakeLists.txt
net/includes/: steeringcontrollerservice.hpp
net/sources/: steeringcontrollerservice.cpp
other/: myconfig.yml
src/: CMakeLists.txt  main.cpp
src/headers/: steeringcontroller.hpp
src/includes/: mjpegdecoder.hpp  steeringcontroller.hpp  videoscreenreciever.hpp
src/sources/: mjpegdecoder.cpp  steeringcontroller.cpp  videoscreenreciever.cpp
ui/modules/: CMakeLists.txt  Pedal.qml  Wheel.qml  qmldir
utils/: CMakeLists.txt  CenteredProgressBar.qml  IpPopUp.qml  ProgressBar.qml  qmldir
